test/should-fail/jfxc3975/jfxc3975b.fx
/**
 * @subtest
 */

package jfxc3975;

public abstract class jfxc3975b {

    protected var parent:jfxc3975b = null;

}
